[ADD] submodule aitmlouk/sdc_oval_account

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,8 @@
 	path = AxoTopMedia/odoo
 	url = git@github.com:AxoTopMedia/odoo.git
 	branch = TEST02
+
+[submodule "aitmlouk/sdc_oval_account"]
+	path = aitmlouk/sdc_oval_account
+	url = git@github.com:aitmlouk/sdc_oval_account.git
+	branch = 11.0
